Fix name being cut off

--- a/src/styles/partials/_components.scss
+++ b/src/styles/partials/_components.scss
@@ -48,6 +48,7 @@ header {
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+            line-height: 6rem;
         }
     }
 }
